# notify-tg

./: .gitignore  Cargo.nix  Cargo.toml  README.md  example-config.toml
src/: main.rs
