[package]
name = "notify-tg"
version = "1.4.2"
authors = ["Mr-Andersen <andrew-anderson.neo@yandex.ru>"]
edition = "2018"

[features]
default = []
socks = ["reqwest/socks"]

[dependencies]
argh = "0.1"
dirs = "3.0"
env_logger = "0.8"
log = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
teloxide-core = "0.1"
toml = "0.5"

[dependencies.tokio]
version = "1.0"
features = ["net", "rt"]
