[package]
name = "notify-tg"
version = "1.4.3"
authors = ["Mr-Andersen <andrassy_anderson@protonmail.com>"]
edition = "2018"

[features]
default = []
socks = ["reqwest/socks"]

[dependencies]
argh = "0.1.7"
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.14"
reqwest = "0.11.8"
toml = "0.5.8"

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.teloxide-core]
version = "0.3.4"
default-features = false

[dependencies.tokio]
version = "1.15.0"
default-features = false
features = ["net", "rt", "time"]
